disain/styles/components/_button.scss
.c-btn {
  display: inline-block;
  padding: 11px 35px;
  font-weight: 500;
  border-radius: 8px;
  border: 0;
  text-decoration: none;
  cursor: pointer;
  @media (max-width: $breakpoint-mobile) {
    display: block;
    width: 100%;
    padding: 12px 35px;
    font-size: 18px;
  }
  &.hidden {
    display: none;
  }
  &--primary {
    color: #fff;
    background-color: #008936;
    border: 2px solid #008936;
    &:hover {
      color: #fff; /* Keep white text color while hovering over button-like links */
      background-color: darken( #008936, 5% );
      border-color: darken( #008936, 5% );
    }
  }
  &--primary:disabled, &--primary[disabled] {
    cursor: default;
    background-color: #cccccc;
    color: #666666;
    border: 2px solid #cccccc;
  }
  &--cancel {
    color: #344255;
    background-color: #ffffff;
    border: 2px solid #344255;
    &:hover {
      color: #fff;
      background-color: #344255;
    }
  }
  &--cancel:disabled, &--cancel[disabled] {
    cursor: default;
    color: #aaaaaa;
    background-color: #ffffff;
    border: 2px solid #aaaaaa;
  }
  &--from-link {
	text-decoration: none;
	text-align: center;
  }
  &:focus {
    outline: 2px solid #337bb5;
    outline-offset: 1px;
  }
}

